Updated Food and Drinks Main menu

--- a/FoodOrderApp/app/src/main/res/layout/menu_item.xml
+++ b/FoodOrderApp/app/src/main/res/layout/menu_item.xml
@@ -20,12 +20,12 @@
             android:id="@+id/menu_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:background="#4f0e0d0e"
+            android:gravity="center"
             android:text="Name of Menu"
             android:textColor="@android:color/white"
-            android:background="#4f0e0d0e"
-            android:textSize="20sp"
-            android:gravity="center"
-            android:layout_alignParentBottom="true"/>
+            android:textSize="20sp" />
         
     </RelativeLayout>
 
