--- a/FoodOrderApp/app/src/main/res/layout/activity_food_list.xml
+++ b/FoodOrderApp/app/src/main/res/layout/activity_food_list.xml
@@ -9,9 +9,12 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_food"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="408dp"
+        android:layout_height="663dp"
         android:scrollbars="vertical"
-        />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
