--- a/FoodOrderApp/app/src/main/res/layout/nav_header_home.xml
+++ b/FoodOrderApp/app/src/main/res/layout/nav_header_home.xml
@@ -3,13 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="@dimen/nav_header_height"
-    android:background="@color/overlayBackground"
+    android:background="@color/overlayAction"
+    android:foreground="@mipmap/ic_banner_foreground"
     android:gravity="bottom"
     android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingBottom="@dimen/activity_vertical_margin"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
 
@@ -19,8 +20,8 @@
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         android:text="Hegarooban"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-        android:textColor="@color/design_default_color_primary_dark" />
+        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+        android:textColor="@color/common_google_signin_btn_text_dark_default" />
 
 
 </LinearLayout>
