--- a/FoodOrderApp/app/src/main/res/layout/activity_vendor_sign_in.xml
+++ b/FoodOrderApp/app/src/main/res/layout/activity_vendor_sign_in.xml
@@ -73,10 +73,10 @@
         android:layout_marginStart="15dp"
         android:layout_marginEnd="15dp"
         android:gravity="center"
-        android:text="@string/slogan"
+        android:text="@string/vendor_slogan"
         android:textAlignment="center"
         android:textColor="@android:color/widget_edittext_dark"
-        android:textSize="18sp"
+        android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView6" />
@@ -90,7 +90,7 @@
         android:layout_marginEnd="20dp"
         android:layout_weight="1"
         android:background="@drawable/common_google_signin_btn_text_dark"
-        android:text="@string/signIn"
+        android:text="@string/vendorsignIn"
         android:textAllCaps="true"
         android:textColor="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -108,7 +108,7 @@
         android:layout_marginEnd="20dp"
         android:layout_weight="1"
         android:background="@drawable/common_google_signin_btn_text_light_normal"
-        android:text="@string/signUp"
+        android:text="@string/vendorsignUp"
         android:textAllCaps="true"
         android:textColor="@android:color/black"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -131,13 +131,12 @@
         app:layout_constraintTop_toBottomOf="@+id/textSlogan" />
 
     <TextView
-        android:id="@+id/textvendorsignin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="17dp"
         android:layout_marginBottom="30dp"
         android:clickable="true"
-        android:text="@string/vendor_sign_in"
+        android:text="@string/customer_sign_in"
         android:textColor="#002AFD"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
