--- a/FoodOrderApp/app/src/main/res/layout/activity_food_details.xml
+++ b/FoodOrderApp/app/src/main/res/layout/activity_food_details.xml
@@ -82,23 +82,27 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal">
-                        
-                        <ImageView
-                            android:layout_width="0dp"
-                            android:layout_weight="1"
+
+                        <TextView
+                            android:id="@+id/textView11"
+                            android:layout_width="8dp"
                             android:layout_height="wrap_content"
-                            android:src="@drawable/bd_taka_icon"
-                            />
+                            android:layout_weight="1"
+                            android:text="RM"
+                            android:textAlignment="center"
+                            android:textColor="#000000"
+                            android:textSize="24sp"
+                            android:textStyle="bold" />
 
                         <TextView
                             android:id="@+id/food_price"
-                            android:layout_width="0dp"
-                            android:layout_weight="9"
+                            android:layout_width="22dp"
                             android:layout_height="wrap_content"
+                            android:layout_weight="9"
                             android:text="1,000"
                             android:textColor="@color/colorPrimary"
                             android:textSize="24sp"
-                            android:textStyle="bold"/>
+                            android:textStyle="bold" />
 
                     </LinearLayout>
 
