--- a/FoodOrderApp/app/src/main/res/layout/activity_sign_up.xml
+++ b/FoodOrderApp/app/src/main/res/layout/activity_sign_up.xml
@@ -124,4 +124,18 @@
         android:text="@string/signUp"
         android:textAllCaps="false"
         android:textColor="@android:color/white" />
+
+    <TextView
+        android:id="@+id/textView10"
+        android:layout_width="226dp"
+        android:layout_height="69dp"
+        android:layout_above="@id/btn_signUp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="55dp"
+        android:layout_marginBottom="472dp"
+        android:text="@string/signUp"
+        android:textAlignment="center"
+        android:textIsSelectable="false"
+        android:textSize="30sp" />
 </RelativeLayout>
