Updated Item lists and Main Menu

--- a/FoodOrderApp/app/src/main/res/layout/content_itemlist.xml
+++ b/FoodOrderApp/app/src/main/res/layout/content_itemlist.xml
@@ -5,16 +5,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".FoodList">
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    tools:context=".ItemList"
+    tools:showIn="@layout/app_bar_itemlist">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_food"
-        android:layout_width="408dp"
-        android:layout_height="663dp"
-        android:scrollbars="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scrollbars="vertical" >
+    </androidx.recyclerview.widget.RecyclerView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
