--- a/FoodOrderApp/app/src/main/res/layout/activity_order_status.xml
+++ b/FoodOrderApp/app/src/main/res/layout/activity_order_status.xml
@@ -1,17 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".OrderStatus">
+    android:fitsSystemWindows="true"
+    tools:openDrawer="start">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/listOrder"
+    <include
+        layout="@layout/app_bar_orderslist"
         android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+    <com.google.android.material.navigation.NavigationView
+        android:id="@+id/nav_view"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:background="@android:color/transparent">
+        android:layout_gravity="start"
+        android:background="@color/fui_bgGoogle"
+        android:fitsSystemWindows="true"
 
-    </androidx.recyclerview.widget.RecyclerView>
+        app:headerLayout="@layout/nav_header_home"
+        app:itemIconTint="@android:color/widget_edittext_dark"
+        app:itemTextColor="@android:color/black"
 
-</RelativeLayout>
+        app:menu="@menu/activity_home_drawer" />
+
+</androidx.drawerlayout.widget.DrawerLayout>
