--- a/FoodOrderApp/app/src/main/res/layout/cart_layout.xml
+++ b/FoodOrderApp/app/src/main/res/layout/cart_layout.xml
@@ -16,39 +16,47 @@
         android:layout_marginBottom="16dp">
 
         <LinearLayout
-            android:layout_width="0dp"
-            android:layout_weight="9"
+            android:layout_width="348dp"
             android:layout_height="wrap_content"
+            android:layout_weight="9"
             android:orientation="vertical">
 
             <TextView
                 android:id="@+id/cart_item_name"
-                android:layout_marginLeft="10dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical|start"
+                android:layout_marginLeft="10dp"
+                android:text="Food 01"
                 android:textAllCaps="true"
-                android:textStyle="bold"
-                android:text="Food 01"/>
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/cart_item_price"
-                android:layout_marginLeft="10dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical|start"
+                android:layout_marginLeft="10dp"
+                android:text="100, 000"
                 android:textAllCaps="true"
-                android:textStyle="italic"
-                android:text="100, 000"/>
+                android:textStyle="italic" />
 
         </LinearLayout>
-        
-        <ImageView
+
+        <TextView
             android:id="@+id/cart_item_count"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_marginRight="8dp"
-            android:layout_gravity="center_vertical|end"/>
+            android:layout_width="28dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical|start"
+            android:layout_marginLeft="10dp"
+            android:background="@color/fbutton_color_belize_hole"
+            android:ellipsize="none"
+            android:text="10"
+            android:textAlignment="center"
+            android:textAllCaps="true"
+            android:textColor="@color/ic_banner_background"
+            android:textSize="18sp"
+            android:textStyle="bold" />
 
     </LinearLayout>
 
