--- a/FoodOrderApp/app/src/main/res/layout/activity_vendor_sign_in.xml
+++ b/FoodOrderApp/app/src/main/res/layout/activity_vendor_sign_in.xml
@@ -131,6 +131,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textSlogan" />
 
     <TextView
+        android:id="@+id/textUserLogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="17dp"
