--- a/FoodOrderApp/app/src/main/res/layout/activity_food_details.xml
+++ b/FoodOrderApp/app/src/main/res/layout/activity_food_details.xml
@@ -85,7 +85,7 @@
 
                         <TextView
                             android:id="@+id/textView11"
-                            android:layout_width="8dp"
+                            android:layout_width="52dp"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
                             android:text="RM"
@@ -96,12 +96,34 @@
 
                         <TextView
                             android:id="@+id/food_price"
-                            android:layout_width="22dp"
-                            android:layout_height="wrap_content"
+                            android:layout_width="11dp"
+                            android:layout_height="match_parent"
                             android:layout_weight="9"
                             android:text="1,000"
                             android:textColor="@color/colorPrimary"
                             android:textSize="24sp"
+                            android:textStyle="bold" />
+
+                        <TextView
+                            android:id="@+id/food_discount"
+                            android:layout_width="1dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:text="10"
+                            android:textAlignment="center"
+                            android:textColor="@color/red"
+                            android:textSize="14sp"
+                            android:textStyle="bold" />
+
+                        <TextView
+                            android:id="@+id/textView14"
+                            android:layout_width="18dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:text="%   off"
+                            android:textAlignment="center"
+                            android:textColor="@color/red"
+                            android:textSize="14sp"
                             android:textStyle="bold" />
 
                     </LinearLayout>
