--- a/FoodOrderApp/app/src/main/res/layout/activity_cart.xml
+++ b/FoodOrderApp/app/src/main/res/layout/activity_cart.xml
@@ -56,10 +56,20 @@
                     android:textSize="24sp" />
 
                 <TextView
+                    android:id="@+id/textView29"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="RM"
+                    android:textColor="@android:color/white"
+                    android:textSize="24sp" />
+
+                <TextView
                     android:id="@+id/total_price"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="$10, 000"
+                    android:paddingLeft="5dp"
+                    android:text="10, 000"
                     android:textColor="@android:color/white"
                     android:textSize="24sp" />
 
