--- a/FoodOrderApp/app/src/main/res/layout/activity_sign_up.xml
+++ b/FoodOrderApp/app/src/main/res/layout/activity_sign_up.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SignIn">
+    tools:context=".MainActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -18,6 +18,35 @@
             android:id="@+id/textView9"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:text="User Type" />
+
+        <RadioGroup
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <RadioButton
+                android:id="@+id/radioUser"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:checked="true"
+                android:text="@string/radioUser"
+                android:textAlignment="center"
+                android:textStyle="bold" />
+
+            <RadioButton
+                android:id="@+id/radioVendor"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/radioVendor"
+                android:textStyle="bold" />
+
+        </RadioGroup>
+
+        <TextView
+            android:id="@+id/textView17"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:text="User ID" />
 
         <EditText
@@ -25,6 +54,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:autofillHints=""
+            android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789"
             android:hint="@string/signUpUser"
             android:inputType="text"
             android:maxLength="50"
@@ -41,18 +71,12 @@
             android:text="Email" />
 
         <EditText
-            android:id="@+id/edit_UserId"
+            android:id="@+id/edit_Email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:autofillHints=""
-            android:hint="Email"
+            android:ems="10"
             android:inputType="textEmailAddress"
-            android:maxLength="50"
-            android:singleLine="true"
-            android:text="@string/signInEmail"
-            android:textColor="@android:color/black"
-            android:textColorHint="@android:color/white"
-            android:textSize="24sp" />
+            android:text="@string/signInEmail" />
 
         <TextView
             android:id="@+id/textView4"
