--- a/FoodOrderApp/app/src/main/res/layout/vendor_foodview.xml
+++ b/FoodOrderApp/app/src/main/res/layout/vendor_foodview.xml
@@ -133,7 +133,7 @@
             android:text="Item Image :" />
 
         <ImageView
-            android:id="@+id/imageView"
+            android:id="@+id/imageItemView"
             android:layout_width="281dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
