Completed Vendor nd included mock Payment Page
Signed-off-by: Durairaj Anbarasan <34974605+djraj@users.noreply.github.com>

--- a/FoodOrderApp/app/src/main/res/layout/activity_vendorhome.xml
+++ b/FoodOrderApp/app/src/main/res/layout/activity_vendorhome.xml
@@ -35,4 +35,10 @@
         android:text="Sales Report"
         android:textSize="15sp" />
 
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:srcCompat="@mipmap/ic_samplepiechart_foreground" />
+
 </LinearLayout>
