--- a/FoodOrderApp/app/src/main/res/layout/activity_vendor_orders.xml
+++ b/FoodOrderApp/app/src/main/res/layout/activity_vendor_orders.xml
@@ -19,7 +19,9 @@
         android:paddingTop="15dp"
         android:paddingBottom="15dp"
         android:text="Pending Orders"
-        android:textSize="15sp" />
+        android:textAlignment="center"
+        android:textSize="15sp"
+        android:textStyle="bold" />
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
@@ -46,7 +48,9 @@
         android:paddingTop="15dp"
         android:paddingBottom="15dp"
         android:text="Completed Orders"
-        android:textSize="15sp" />
+        android:textAlignment="center"
+        android:textSize="15sp"
+        android:textStyle="bold" />
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
