--- a/FoodOrderApp/app/src/main/res/layout/activity_vendor_paymentdetails.xml
+++ b/FoodOrderApp/app/src/main/res/layout/activity_vendor_paymentdetails.xml
@@ -106,7 +106,7 @@
 
         <TextView
             android:id="@+id/textView21"
-            android:layout_width="91dp"
+            android:layout_width="77dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:paddingLeft="15dp"
@@ -130,52 +130,52 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="315dp"
+        android:layout_height="wrap_content"
         android:orientation="horizontal">
 
         <TextView
             android:id="@+id/textView22"
-            android:layout_width="189dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:paddingLeft="15dp"
             android:paddingTop="10dp"
-            android:text="Items :"
+            android:text="Date :"
             android:textStyle="bold" />
 
-        <androidx.core.widget.NestedScrollView
-            android:layout_width="match_parent"
-            android:layout_height="274dp"
+        <TextView
+            android:id="@+id/orderPDate"
+            android:layout_width="276dp"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:fillViewport="true">
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/singleItemList"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-        </androidx.core.widget.NestedScrollView>
+            android:paddingLeft="15dp"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
+            android:text="01/01/2020 8:49.36PM"
+            android:textSize="16sp"
+            android:textStyle="bold" />
 
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal">
-
-        <Button
-            android:id="@+id/btnCancel"
-            android:layout_width="184dp"
-            android:layout_height="wrap_content"
-            android:text="Cancel Order"
-            android:textColor="@color/red" />
+        android:gravity="center"
+        android:orientation="vertical">
 
         <Button
             android:id="@+id/btnComplete"
-            android:layout_width="254dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Complete Order"
+            android:text="View Order Items"
             android:textColor="@color/fbutton_color_belize_hole" />
+
+        <Button
+            android:id="@+id/btnCancel"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Back"
+            android:textColor="@color/overlayAction" />
     </LinearLayout>
 
 </LinearLayout>
