--- a/FoodOrderApp/app/src/main/res/layout/order_layout.xml
+++ b/FoodOrderApp/app/src/main/res/layout/order_layout.xml
@@ -52,7 +52,7 @@
                 android:text="123456789"/>
 
             <TextView
-                android:id="@+id/order_address"
+                android:id="@+id/order_email"
                 android:layout_marginLeft="10dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
