--- a/FoodOrderApp/app/src/main/res/layout/vendor_fooditemslayout.xml
+++ b/FoodOrderApp/app/src/main/res/layout/vendor_fooditemslayout.xml
@@ -20,7 +20,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            app:srcCompat="@mipmap/ic_bannerfood" />
+            android:adjustViewBounds="true"
+            android:maxWidth="50dp"
+            android:maxHeight="50dp"
+            android:overScrollMode="never"
+            android:scaleType="centerInside"
+            app:srcCompat="@drawable/ic_restaurant_black" />
 
         <TextView
             android:id="@+id/txtFoodName"
@@ -34,8 +39,9 @@
             android:id="@+id/textView24"
             android:layout_width="1dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
+            android:layout_gravity="center"
             android:layout_weight="1"
+            android:gravity="left|center_vertical"
             android:text="RM"
             android:textAlignment="center" />
 
