--- a/FoodOrderApp/app/src/main/res/layout/vendor_mainorderlayout.xml
+++ b/FoodOrderApp/app/src/main/res/layout/vendor_mainorderlayout.xml
@@ -33,7 +33,7 @@
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/order_address"
+                android:id="@+id/order_email"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical|start"
