--- a/FoodOrderApp/app/src/main/res/layout/vendor_singleorderlayout.xml
+++ b/FoodOrderApp/app/src/main/res/layout/vendor_singleorderlayout.xml
@@ -16,7 +16,7 @@
         android:layout_marginBottom="16dp">
 
         <TextView
-            android:id="@+id/order_id"
+            android:id="@+id/order_itemName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical|start"
@@ -40,7 +40,7 @@
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/order_address"
+            android:id="@+id/order_itemQty"
             android:layout_width="217dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical|start"
