--- a/FoodOrderApp/app/src/main/res/layout/vendor_foodview.xml
+++ b/FoodOrderApp/app/src/main/res/layout/vendor_foodview.xml
@@ -56,7 +56,7 @@
             android:layout_width="219dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
+            android:digits="0123456789 "
             android:editable="true"
             android:ems="10"
             android:enabled="false"
@@ -84,7 +84,7 @@
             android:layout_width="243dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
+            android:digits="0123456789"
             android:editable="true"
             android:ems="10"
             android:enabled="false"
@@ -144,7 +144,7 @@
             android:adjustViewBounds="true"
             android:maxWidth="280dp"
             android:maxHeight="200dp"
-            android:scaleType="centerInside"
+            android:scaleType="center"
             app:srcCompat="@drawable/ic_restaurant_black" />
     </LinearLayout>
 
