--- a/FoodOrderApp/app/src/main/res/layout/app_bar_home.xml
+++ b/FoodOrderApp/app/src/main/res/layout/app_bar_home.xml
@@ -7,6 +7,7 @@
     tools:context=".Home">
 
     <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/appBarLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:theme="@style/AppTheme.AppBarOverlay">
@@ -23,12 +24,20 @@
     <include layout="@layout/content_home" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/fab_margin"
-        app:backgroundTint="#2196F3"
-        app:srcCompat="@drawable/shoping_cart_white" />
+        android:id="@+id/notificationButton"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_gravity="top|end"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="5dp"
+        android:clickable="true"
+        android:focusable="true"
+        android:scaleType="center"
+        app:backgroundTint="@color/fbutton_color_belize_hole"
+        app:fabSize="mini"
+        app:maxImageSize="20dp"
+        app:srcCompat="@android:drawable/ic_popup_reminder" />
+
+
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
