--- a/FoodOrderApp/app/src/main/res/layout/nav_main_vendor.xml
+++ b/FoodOrderApp/app/src/main/res/layout/nav_main_vendor.xml
@@ -17,13 +17,13 @@
             android:layout_height="?attr/actionBarSize"
             android:background="@color/fbutton_color_midnight_blue"
             android:clickable="true"
+            android:focusable="true"
             android:textAlignment="center"
             app:layout_scrollFlags="scroll|enterAlways"
             app:title="Home"
             app:titleMargin="4dp"
             app:titleMarginStart="30dp"
-            app:titleTextColor="@color/ic_banner_background"
-            android:focusable="true"></androidx.appcompat.widget.Toolbar>
+            app:titleTextColor="@color/ic_banner_background"></androidx.appcompat.widget.Toolbar>
 
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/tabs"
@@ -62,5 +62,20 @@
         </com.google.android.material.tabs.TabLayout>
 
     </com.google.android.material.appbar.AppBarLayout>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/notificationButton"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_gravity="top|end"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="5dp"
+        android:clickable="true"
+        android:focusable="true"
+        android:scaleType="center"
+        app:backgroundTint="@color/fbutton_color_belize_hole"
+        app:fabSize="mini"
+        app:maxImageSize="20dp"
+        app:srcCompat="@android:drawable/ic_popup_reminder" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
