--- a/FoodOrderApp/app/src/main/res/layout/vendor_foodview.xml
+++ b/FoodOrderApp/app/src/main/res/layout/vendor_foodview.xml
@@ -56,7 +56,7 @@
             android:layout_width="219dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:digits="0123456789 "
+            android:digits="0123456789."
             android:editable="true"
             android:ems="10"
             android:enabled="false"
